# NeoPlayer

./: .gitignore  .gitmodules  AUTHORS  LICENSE  README.md  TAURI_MIGRATION.md  forge.config.js  index.html  jsconfig.json  main.js  nodemon.json  package-lock.json  package.json  preload.js  renderer.js  vite.main.config.js  vite.renderer.config.js
.github/workflows/: build.yml  nightly.yml  release.yml
_electron_legacy/: README.md  forge.config.js
app/: animations.css  app.css  app.html  app.js
docs/: tauri-migration-map.md
scripts/: COWBELL.txt  install-cowbell.js
src/: App.vue  animations.css  index.html  index.js  main.js  preload.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/css/: index.css
src/assets/js/: index.js
src/css/: animations.css  index.css
src/electron/: main.js  preload.js
src/html/: index.html
src/icons/: icon.icns
src/js/: index.js  useCowbell.js
src/js/utils/: handleElem.js  index.js  timeUtils.js
src/lib/: tauriAdapter.js
src/lib/chiptune/: README.md  convert.html  index.html  package.json
src/lib/chiptune/docker/: Dockerfile  build.bat  build.sh
src/ui/: App.vue  index.html  main.js
src/ui/css/: index.css
src/ui/html/: index.html
src/ui/js/: index.js
src/ui/js/utils/: handleElem.js  showDialog.js  timeUtils.js
